...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ofC-4W-wHD">
                                <rect key="frame" x="121.66666666666667" y="103.99999999999999" width="170.66666666666663" height="170.66666666666663"/>
                                <accessibility key="accessibilityConfiguration" label="aluno"/>
                                <state key="normal" image="aluno"/>
                                <state key="selected" image="aluno"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                <state key="normal" title="entrar">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                        <viewLayoutGuide key="safeArea" id="hUb-Y8-Pwu"/>
                    </view>
                    <navigationItem key="navigationItem" title="calendário" id="V2G-Pb-maT"/>
                    <connections>
                        <outlet property="calendarioView" destination="9Si-Xp-E5M" id="KZJ-Fs-FOQ"/>
...
                                                    </constraints>
                                                </imageView>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="minha escola" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pZz-kf-BJy">
                                                    <rect key="frame" x="20" y="27.666666666666671" width="136.66666666666666" height="29"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
...
                                                    </constraints>
                                                </imageView>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="sobre mim" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fnb-La-KOI">
                                                    <rect key="frame" x="20" y="27.666666666666671" width="108" height="29"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
...
                                                    </constraints>
                                                </imageView>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="horário de aulas" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tAt-bF-NKA">
                                                    <rect key="frame" x="20" y="27.666666666666671" width="164" height="29"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="notas" translatesAutoresizingMaskIntoConstraints="NO" id="XQ3-ZC-s3C">
                                                    <rect key="frame" x="330" y="10" width="64" height="64"/>
                                                    <constraints>
...
                                                    </constraints>
                                                </imageView>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="frequência" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JNM-Xb-jyH">
                                                    <rect key="frame" x="20" y="27.666666666666671" width="110" height="29"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="carteirinha" translatesAutoresizingMaskIntoConstraints="NO" id="oyP-xe-jeu">
                                                    <rect key="frame" x="330" y="10" width="64" height="64"/>
                                                    <constraints>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="boletim" translatesAutoresizingMaskIntoConstraints="NO" id="VwY-2S-Zaf">
                                                    <rect key="frame" x="330" y="10" width="64" height="64"/>
                                                    <constraints>
...
                        <viewLayoutGuide key="safeArea" id="BY4-al-Wb6"/>
                    </view>
                    <navigationItem key="navigationItem" title="menu" id="X8o-qc-NIn"/>
                    <connections>
                        <outlet property="alturaStatusBarConstraint" destination="PCH-ux-t4R" id="Bor-ys-c2e"/>
...
                        <viewLayoutGuide key="safeArea" id="eEu-cu-6Iy"/>
                    </view>
                    <navigationItem key="navigationItem" title="horários" id="IJd-Gg-bMZ"/>
                    <connections>
                        <outlet property="diaDaSemanaLabel" destination="CeE-nu-XaB" id="cGn-tI-uCX"/>
...
